Fix alignment issue with sponsorship icon in home page

--- a/src/_assets/scss/_tdevs_custom.scss
+++ b/src/_assets/scss/_tdevs_custom.scss
@@ -68,7 +68,7 @@
   }
   .sponsor-list img {
     display: block;
-    margin: 0 auto 0 90px;
+    margin: 0 auto;
     padding: 10px;
   }
   .sponsor-list {
